fix: update openapi.yaml to fix bug related to property name
- In the openapi.yaml document, `step_order` field was replaced by `stepOrder`.
-  In the endpoint POST /visualRoutes, the property in stepsMeta MUST be named `stepOrder`.
- Sending `step_order` causes a bug, because the javascript object expects a property named `stepOrder`.
- This was a silent bug, the compiler didn't warn that `step_order` was not being converted to `stepOrder`
